[package]
name = "c_import"
version = "0.2.2"
edition = "2021"
description = "A c_import macro for Rust"
repository = "https://github.com/MoAlyousef/c_import"
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true
